@@ -72,3 +72,5 @@
 	- Made reactify output more consistent 
 2018-09-06
 	- Fixed a bug where a user muting or deafening would trigger the voice log
+2018-09-22
+	- Added excluded channels, which won't detect watch keys said within them.
